--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 <body>
 
     <header>
-        <h1>Welcome to My Rashid Webpage</h1>
+        <h1>Welcome to Rashid Webpage</h1>
     </header>
 
     <div class="container">
         <p>Hello! This is a simple webpage example made with HTML and a bit of CSS styling. Below is an image and a list:</p>
         
-        <img src="./index_files/600x300" alt="Sample Image">
+        <img src="file:///home/rashid/Documents/learn/tamrin1/index_files/600x300" alt="Sample Image">
         
         <h2>Things I Love:</h2>
         <ul>
